@@ -1,5 +1,6 @@
 NOCC 0.9.5	??   ??, 2001
 
+	* Added rudimentary user preferences (name, email and signature).
 	* Removed nowrap table attributes, as they cause problems for
 	  800x600 users.
 	* New paperclip icon to indicate attachments.
